tests/shared/examples/fails/creation_5.py
# COMPILE_PREFABS
from prefab_classes import prefab, attribute


@prefab(compile_prefab=True, compile_fallback=True)
class Construct:
    x = attribute(default=12, default_factory=list)
